# ctagentopenai

./: .gitignore  README.md  pyproject.toml
docs/: agent-roadmap.md  agent-synopsis.md  memory-lab-cases.md  milestone-2-conversation-and-memory.md  milestone-6-retrieval.md
inputs/: exercise-plan-turns.txt  fda-label-eval.json  fda-label-sample.json  last-n-forgetting-turns.txt  summary-compaction-turns.txt
src/: agent.py  main.py
src/ctagentopenai/: __init__.py  agent.py  cli.py  memory_lab.py  memory_lab_suite.py  retrieval.py  runner.py  tool.py
tests/: test_agent.py  test_cli.py  test_retrieval.py
