[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctagentopenai"
version = "0.1.0"
description = "This project is for experimenting with OpenAI SDK in attempt to create an agent which can chat and has use of some minimal tooling."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
 "openai>=2.26.0",
]

[project.scripts]
ctagentopenai = "ctagentopenai.cli:main"
ctagentopenai-memory-lab = "ctagentopenai.memory_lab:main"
ctagentopenai-memory-lab-suite = "ctagentopenai.memory_lab_suite:main"

[dependency-groups]
dev = [
 "pytest>=8.0",
 "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctagentopenai"]

[tool.hatch.build]
exclude = [
 ".*.key",
 ".pytest_cache",
 ".python-version",
 ".uv-cache",
 ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
